--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
              </p>
          </div>
 
-         <div>
+         <div class="position"> 
              <img class="moon" src="Moon.png" alt="Moon">
              <img class="car" src="Car.png" alt="Car">
              <img class="highway" src="Highway.jpg" alt="Highway">
